<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pass_rating_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.hayesdm.quarterbackpassratingcalc.PassRatingCalc">


    <!-- The Passing Attempts -->

    <EditText
        android:id="@+id/passAttemptsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginLeft="16dp"
        android:text="@string/pass_attempts"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/passAttemptsLabel"
        android:layout_toRightOf="@id/passAttemptsLabel"/>


    <!-- The Passing Completions -->


    <TextView
        android:id="@+id/passCompleteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_completions_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/passCompleteEditText"
        android:layout_alignBottom="@+id/passCompleteEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/passYardLabel"
        android:layout_alignEnd="@+id/passYardLabel"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passCompleteEditText"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_below="@+id/passAttemptsEditText"
        android:layout_alignLeft="@+id/passAttemptsEditText"
        android:layout_alignStart="@+id/passAttemptsEditText"
        android:layout_alignRight="@+id/passAttemptsEditText"
        android:layout_alignEnd="@+id/passAttemptsEditText"
        android:text="@string/pass_completions"/>

    <!-- The Passing Yards -->


    <TextView
        android:id="@+id/passYardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_yard_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/passYardEditText"
        android:layout_alignBottom="@+id/passYardEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_alignRight="@+id/passTouchdownLabel"
        android:layout_alignEnd="@+id/passTouchdownLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passYardEditText"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_below="@+id/passCompleteEditText"
        android:layout_alignLeft="@+id/passCompleteEditText"
        android:layout_alignStart="@+id/passCompleteEditText"
        android:layout_alignRight="@+id/passCompleteEditText"
        android:layout_alignEnd="@+id/passCompleteEditText"
        android:text="@string/pass_yards"/>

    <!-- The Passing Touchdowns -->


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passTouchdownEditText"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_below="@+id/passYardEditText"
        android:layout_alignLeft="@+id/passYardEditText"
        android:layout_alignStart="@+id/passYardEditText"
        android:layout_alignRight="@+id/passYardEditText"
        android:layout_alignEnd="@+id/passYardEditText"
        android:text="@string/pass_touchdowns"/>

    <TextView
        android:id="@+id/passTouchdownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_touchdown_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_alignBaseline="@+id/passTouchdownEditText"
        android:layout_alignBottom="@+id/passTouchdownEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/passInterceptionLabel"
        android:layout_alignEnd="@+id/passInterceptionLabel" />

    <!-- The Passing Interceptions -->


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passInterceptionEditText"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:text="@string/pass_interceptions"
        android:layout_below="@+id/passTouchdownEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/passTouchdownEditText"
        android:layout_alignStart="@+id/passTouchdownEditText" />

    <TextView
        android:id="@+id/passAttemptsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_attempts_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/passCompleteLabel"
        android:layout_alignEnd="@+id/passCompleteLabel" />

    <TextView
        android:id="@+id/passInterceptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_interception_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_alignBaseline="@+id/passInterceptionEditText"
        android:layout_alignBottom="@+id/passInterceptionEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <!-- Buttons -->
    <Button
        android:text="@string/clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passInterceptionEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/clearAll"
        android:layout_toStartOf="@+id/passInterceptionEditText"
        android:layout_toLeftOf="@id/passInterceptionEditText"
        android:layout_alignRight="@+id/passInterceptionLabel"
        android:layout_alignEnd="@+id/passInterceptionLabel"
        android:layout_marginTop="6dp"/>

    <Button
        android:text="@string/calculate_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passInterceptionEditText"
        android:layout_toRightOf="@+id/clearAll"
        android:id="@+id/calculate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"/>

    <TextView
        android:text="@string/qb_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearAll"
        android:layout_marginTop="18dp"
        android:id="@+id/qbRatingLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/qb_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qbRatingValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/qbRatingLabel"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"/>


</RelativeLayout>
